Removed files from project

--- a/LSM/Views/Courses/Edit.cshtml
+++ b/LSM/Views/Courses/Edit.cshtml
@@ -24,10 +24,10 @@
 
 
 <h1>Course: @Model.Name</h1>
-@if (!(ViewBag.Message == "None"))
+@*@if (!(ViewBag.Message == String.Empty))
 {
-    <div id="message2" class="green"><p>@messagetosend</p></div>
-}
+    <div id="message"><p>@messagetosend</p></div>
+}*@
 <div class="container">
 
     <div class="row">
