--- a/LSM/Content/Site.css
+++ b/LSM/Content/Site.css
@@ -2,6 +2,14 @@
     color: #EFB509;
 }
 
+h1 {
+    margin-top: 0px;
+}
+
+
+.breadcrumb {
+    margin-bottom: 0px;
+}
 .button-design {
     margin: 10px 0px;
     background-color: #16253D;
@@ -34,24 +42,18 @@
     opacity: 1;
 }
 
-#message2 {
-    width: 100%;
+#message {
     display: none;
+    background-color: #16253D;
+    border-radius: 5px;
+    color: #EFB509;
+    font-size: 14px;
+    opacity: 0.8;
+    padding: 6px 9px;
+    margin: 0px;
 }
 
-    #message2 p {
-        font-size: 1em;
-        padding: 5px;
-        color: white;
-    }
-
-.green {
-    background-color: green;
-}
-
-.red {
-    background-color: red;
-}
+  
 
 html {
     height: 100%;
@@ -81,6 +83,11 @@ body {
     background-color: #fdfdfd;
 }
 
+#message-row {
+    min-height: 60px;
+    padding-top: 20px;
+}
+
 .dl-horizontal dt {
     white-space: normal;
 }
@@ -98,10 +105,6 @@ textarea {
     background-color: #fdfdfd;
 }
 
-
-
-
-
 .form-horizontal {
     background-image: url(../Images/body-pattern.jpeg);
     width: 500px;
@@ -109,11 +112,6 @@ textarea {
     border-radius: 20px;
     padding: 20px;
 }
-
-
-
-
-
 
 #tableStudents {
     display: none;
