--- a/LSM/Views/Courses/Create.cshtml
+++ b/LSM/Views/Courses/Create.cshtml
@@ -55,7 +55,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Add new Course" class="btn btn-success" />
+                <input type="submit" value="Add new Course" class="btn button-design" />
                 @Html.ActionLink("Cancel", "Index", new { id = 0 }, new {@class="btn button-design"})
 
             </div>
